--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,7 @@
 @import './common';
-@import './example';
+@import './header';
+@import './header-library';
+@import './gallery';
+@import './gallery-library';
+@import './modal';
+@import './footer';
