Implementare partiala a functionalitatii pentru afisarea galeriei de filme si stilizare

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,7 +1,13 @@
+@import './breakpoints';
+@import './variables';
 @import './common';
 @import './header';
 @import './header-library';
 @import './gallery';
+@import './pagination';
 @import './gallery-library';
 @import './modal';
 @import './footer';
+
+
+
