Fix: Am adaugat genurile filmelor in movie-info

--- a/src/sass/gallery.scss
+++ b/src/sass/gallery.scss
@@ -199,3 +199,9 @@ ul.movies {
   margin-right: auto;
   border-radius: 10px; /* Colțuri rotunjite */
 }
+
+.movie-genres {
+  color: #757575;
+  font-size: 14px;
+  margin-top: 5px;
+}
