--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -19,7 +19,7 @@
           <h2 id="movie-title"></h2>
           <div id="movie-description">
             <div class="description-item">
-              <span>Votes:</span>
+              <span>Vote/Votes:</span>
               <div id="movie-votes"></div>
             </div>
             <div class="description-item">
@@ -27,7 +27,7 @@
               <div id="movie-popularity"></div>
             </div>
             <div class="description-item">
-              <span>Original title:</span>
+              <span >Original title:</span>
               <div id="original-title"></div>
             </div>
             <div class="description-item">
@@ -36,7 +36,7 @@
             </div>
           </div>
           <div class="about-wrapper">
-            <span>About:</span>
+            <span>About</span>
             <div id="movie-about"></div>
           </div>
 
