--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,11 @@
 <header class="header">
     <div class="container">
+      
+      <form name="form" action="" method="post" >
+        <input type="text" name="search-field" value="romania" class="search-field" />
+        <input type="button" name="search-button" value="submit" class="search-button" />
+      </form>
+      
       <!-- Top-left buttons -->
       <div class="header-buttons">
         <!-- Movie Search Button -->
