--- a/src/sass/_pagination.scss
+++ b/src/sass/_pagination.scss
@@ -1,80 +1,171 @@
-.pagination-container {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	align-items: center;
-	font-family: 'Roboto', sans-serif;
-	font-size: 12px;
-	font-weight: 500;
-	line-height: 16px;
-	text-align: left;
-	gap: 8px;
-	text-underline-position: from-font;
-	text-decoration-skip-ink: none;
-  
-	@media screen and (min-width: $tablet) {
-	  padding: 60px 0;
-	}
-  
-	@media screen and (min-width: $mobile) and (max-width: $tablet) {
-	  padding: 40px 0;
-	}
+/*
+$primary-text-color replaced by #000000
+$accent-color replaced by #B92F2C
+$secondary-bgc replaced by #F7F7F7
+
+*/
+
+button {
+  cursor: pointer;
+}
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 60px;
+  gap: 16px;
+}
+.page-btn {
+  min-width: 40px;
+  height: 40px;
+  padding: 8px;
+
+  font-weight: 500;
+  font-family: inherit;
+  font-size: 12px;
+  line-height: 1.25;
+  border-radius: 5px;
+  border: none;
+
+  background: transparent;
+  border: none;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:not(:last-child) {
+    margin-right: 2px;
   }
-  
-  .pagination-button:not(:last-child),
-  .dots {
-	margin-right: 16px;
+  &:hover,
+  &:focus {
+    color: #fff;
+    background-color: rgba(#B92F2C, 0.6);
   }
-  
-  .dots {
-	color: black;
+}
+
+.page-btn.active-page {
+  background-color: #B92F2C;
+  color: #000000;
+}
+.prev-btn,
+.next-btn {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+
+  width: 40px;
+  height: 40px;
+
+  border-radius: 5px;
+  border: none;
+
+  background: #F7F7F7;
+}
+.icon {
+  display: flex;
+  align-self: center;
+
+  width: 16px;
+  height: 16px;
+  stroke-width: 0;
+  stroke: currentColor;
+  fill: currentColor;
+  pointer-events: none;
+}
+// slider style
+.swiper {
+  margin-bottom: 80px;
+  &-title {
+    margin-bottom: 40px;
+    font-family: inherit;
+    font-size: 26px;
+    text-transform: uppercase;
+    text-align: center;
+    color: #000;
   }
-  
-  .pagination-button {
-	padding: 0;
-	background-color: white;
-	border: none;
-	color: #000000;
-	cursor: pointer;
-	font-weight: 500;
-	font-size: 12px;
-	line-height: 1.333;
-	// width: 40px;
-	// height: 40px;
+  &-slide {
+    overflow: hidden;
   }
-  
-  .pagination--current {
-	width: 40px;
-	height: 40px;
-	border-radius: 5px;
-	background-color: #ff6b08;
-	color: white;
+  &-backdrop {
+    opacity: 0;
+    background-color: #000000a8;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    transition: opacity 350ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-  
-  .dots,
-  .first-button,
-  .last-button {
-	@media screen and (max-width: $mobile) {
-	  display: none;
-	}
+  &-link {
+    & > * {
+      pointer-events: none;
+    }
+    & > img {
+      transition: transform 350ms cubic-bezier(0.4, 0, 0.2, 1);
+      border-radius: 5px;
+    }
+    &:hover > img,
+    &:focus > img {
+      transform: scale(1.2);
+    }
+    &:hover .swiper-backdrop,
+    &:focus .swiper-backdrop,
+    &:hover .swiper-backdrop > .icon-play,
+    &:focus .swiper-backdrop > .icon-play {
+      opacity: 1;
+    }
   }
-  
-  .arrow-left,
-  .arrow-right {
-	width: 40px;
-	height: 40px;
-	border-radius: 5px;
-	background-color: #F7F7F7;
-	transform: matrix(-1, 0, 0, 1, 0, 0);
-	stroke: #000;
-	background-position: center;
-	background-repeat: no-repeat;
+}
+.swiper-button-prev,
+.swiper-button-next {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 10;
+}
+.swiper-button-prev {
+  left: 8px;
+}
+.swiper-button-next {
+  right: 8px;
+}
+.swiper-button-next-icon,
+.swiper-button-prev-icon {
+  width: 35px;
+  height: 35px;
+  fill: currentColor;
+  opacity: 0.6;
+  cursor: pointer;
+}
+.icon-play {
+  opacity: 0;
+  position: absolute;
+  width: 50px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  fill: currentColor;
+  transition: opacity 550ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (max-width: 768px) {
+  .end-btn,
+  .start-btn,
+  .next-dots,
+  .prev-dots {
+    display: none;
   }
-  
-  .arrow-left {
-	background-image: url(../images/arrow-right.svg);
+  .pagination {
+    margin-top: 40px;
   }
-  
-  .arrow-right {
-	background-image: url(../images/arrow-left.svg);
+  .swiper-button-next-icon,
+  .swiper-button-prev-icon {
+    width: 25px;
+    height: 25px;
   }
+  .swiper-button-prev {
+    left: 4px;
+  }
+  .swiper-button-next {
+    right: 4px;
+  }
+}
