am creat foote-ul si modalul studentii GOIT

--- a/src/partials/about_footer.html
+++ b/src/partials/about_footer.html
@@ -1,33 +1,132 @@
-<footer class="footer">
-  <div class="footer-container">
-    <div class="footer-logo">
+<div class="backdrop-modal modal-backdrop-hiden">
+  <div class="team-modal">
+    <button class="team-button-close close-team-modal">
+        <svg class="team-icon team-icon-close">
+            <use href="./images/icons.svg#icon-close"></use>
+        </svg> 
+    </button>
+    <h1 class="team-title">Echipa nr 3</h1>
+    <div class="team-container">
+        <div class="team__member">
+            <div class="team__card">
+             <img class="team__photo" src="./images/avatars-000425326518-6qekg1-t240x240.jpg"
+             alt="Anonim"/>
+            </div>
+           <a class="team__link"
+           href="https://github.com/"
+           target="_blank">
+           <svg class="team__github" width="25" height="25">
+            <use href="./images/icons.svg#icon-github"></use>
+           </svg>
+           </a>
+           <p class="team__name">Nume Membru</p>
+           <p class="team__role">Rol Membru</p>
+         </div>
+         <div class="team__member">
+            <div class="team__card">
+             <img class="team__photo" src="./images/avatars-000425326518-6qekg1-t240x240.jpg"
+             alt="Anonim"/>
+            </div>
+           <a class="team__link"
+           href="https://github.com/"
+           target="_blank">
+           <svg class="team__github" width="25" height="25">
+            <use href="./images/icons.svg#icon-github"></use>
+           </svg>
+           </a>
+           <p class="team__name">Nume Membru</p>
+           <p class="team__role">Rol Membru</p>
+         </div>
+         <div class="team__member">
+            <div class="team__card">
+             <img class="team__photo" src="./images/avatars-000425326518-6qekg1-t240x240.jpg"
+             alt="Anonim"/>
+            </div>
+           <a class="team__link"
+           href="https://github.com/"
+           target="_blank">
+           <svg class="team__github" width="25" height="25">
+            <use href="./images/icons.svg#icon-github"></use>
+           </svg>
+           </a>
+           <p class="team__name">Nume Membru</p>
+           <p class="team__role">Rol Membru</p>
+         </div>
+         <div class="team__member">
+            <div class="team__card">
+             <img class="team__photo" src="./images/avatars-000425326518-6qekg1-t240x240.jpg"
+             alt="Anonim"/>
+            </div>
+           <a class="team__link"
+           href="https://github.com/"
+           target="_blank">
+           <svg class="team__github" width="25" height="25">
+            <use href="./images/icons.svg#icon-github"></use>
+           </svg>
+           </a>
+           <p class="team__name">Nume Membru</p>
+           <p class="team__role">Rol Membru</p>
+         </div>
+         <div class="team__member">
+            <div class="team__card">
+             <img class="team__photo" src="./images/avatars-000425326518-6qekg1-t240x240.jpg"
+             alt="Anonim"/>
+            </div>
+           <a class="team__link"
+           href="https://github.com/"
+           target="_blank">
+           <svg class="team__github" width="25" height="25">
+            <use href="./images/icons.svg#icon-github"></use>
+           </svg>
+           </a>
+           <p class="team__name">Nume Membru</p>
+           <p class="team__role">Rol Membru</p>
+         </div>
+         <div class="team__member">
+            <div class="team__card">
+             <img class="team__photo" src="./images/avatars-000425326518-6qekg1-t240x240.jpg"
+             alt="Anonim"/>
+            </div>
+           <a class="team__link"
+           href="https://github.com/"
+           target="_blank">
+           <svg class="team__github" width="25" height="25">
+            <use href="./images/icons.svg#icon-github"></use>
+           </svg>
+           </a>
+           <p class="team__name">Nume Membru</p>
+           <p class="team__role">Rol Membru</p>
+         </div>
+         <div class="team__member">
+            <div class="team__card">
+             <img class="team__photo" src="./images/avatars-000425326518-6qekg1-t240x240.jpg"
+             alt="Anonim"/>
+            </div>
+           <a class="team__link"
+           href="https://github.com/"
+           target="_blank">
+           <svg class="team__github" width="25" height="25">
+            <use href="./images/icons.svg#icon-github"></use>
+           </svg>
+           </a>
+           <p class="team__name">Nume Membru</p>
+           <p class="team__role">Rol Membru</p>
+         </div>
+         <div class="team__member">
+            <div class="team__card">
+             <img class="team__photo" src="./images/avatars-000425326518-6qekg1-t240x240.jpg"
+             alt="Anonim"/>
+            </div>
+           <a class="team__link"
+           href="https://github.com/"
+           target="_blank">
+           <svg class="team__github" width="25" height="25">
+            <use href="./images/icons.svg#icon-github"></use>
+           </svg>
+           </a>
+           <p class="team__name">Nume Membru</p>
+           <p class="team__role">Rol Membru</p>
+         </div>
     </div>
-    <div class="footer-bottom">
-      <p>
-        &copy; 2020 | All Rights Reserved | Developed with ❤️ by
-        <span class="team-link" id="teamLink">GoIT Students</span>
-      </p>
-    </div>
-  </div>
-</footer>
-
-<!-- Fereastra modală -->
-<div class="modal" id="teamModal">
-  <div class="modal-content">
-    <span class="close-btn" id="closeModal">&times;</span>
-    <h2>GoIT Students</h2>
-    <ul class="team-list">
-      <li>Flori Petruța Moise - Team Leader/Frontend Developer</li>
-      <li>Gratiela Chirtop - Scrum Master/Frontend Developer</li>
-      <li>Cosma Abiatar-Olivian - Frontend Developer</li>
-      <li>Adeline-Cristina Cozma - Frontend Developer</li>
-      <li>Victoria Daguța - Frontend Developer</li>
-      <li>Tănase Ion-Claudiu - Frontend Developer</li>
-      <li>Petronela Grigore - Frontend Developer</li>
-      <li>Palamariu Florin - Frontend Developer</li>
-    </ul>
   </div>
 </div>
-
-
-</body>
