--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,33 +1,10 @@
 <footer class="footer">
   <div class="footer-container">
-    <div class="footer-logo">
-
-    </div>
-    <div class="footer-bottom">
-      <p>
-        &copy; 2020 | All Rights Reserved | Developed with ❤️ by
-        <span class="team-link" id="teamLink">GoIT Students</span>
-      </p>
+    <p class="footer-text">&#169; 2023 | All Rights Reserved |</p>
+    <div class="footer-credits">
+      Developed with
+      <img class="heart-icon" src="./images/footer-heart-icon.png" alt="heart-icon" width="14" height="14" />
+      <p class="credits-text footer-link">by GoIT Students</p>
     </div>
   </div>
 </footer>
-
-<!-- Fereastra modală -->
-<div class="modal" id="teamModal">
-  <div class="modal-content">
-    <span class="close-btn" id="closeModal">&times;</span>
-    <h2>GoIT Students</h2>
-    <ul class="team-list">
-      <li>Flori Petruța Moise - Team Leader/Frontend Developer</li>
-      <li>Gratiela Chirtop - Scrum Master/Frontend Developer</li>
-      <li>Cosma Abiatar-Olivian - Frontend Developer</li>
-      <li>Adeline-Cristina Cozma - Frontend Developer</li>
-      <li>Victoria Daguța - Frontend Developer</li>
-      <li>Tănase Ion-Claudiu - Frontend Developer</li>
-      <li>Petronela Grigore - Frontend Developer</li>
-      <li>Palamariu Florin - Frontend Developer</li>
-    </ul>
-  </div>
-</div>
-
-</body>
