--- a/src/sass/footer.scss
+++ b/src/sass/footer.scss
@@ -1,34 +1,73 @@
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
+.footer {
     width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.4);
-    padding-top: 60px;
-}
-
-.modal-content {
-    background-color: #fefefe;
-    margin: 5% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-    max-width: 500px;
-}
-
-.close-btn {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.close-btn:hover,
-.close-btn:focus {
-    color: black;
-    text-decoration: none;
+    height: 100px;
+    margin-top: auto;
+    padding-top: 28px;
+    padding-bottom: 29px;
+    text-align: center;
+    background-color: #f7f7f7;
+    @media screen and (min-width: 768px) {
+      height: 79px;
+      padding-top: 30px;
+      padding-bottom: 30px;
+    }
+  }
+  
+  .footer-container {
+    @media screen and (min-width: 768px) {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+  .footer-text {
+    color: #545454;
+    line-height: calc(16 / 14);
+    letter-spacing: 0.3em;
+  
+    @media screen and (min-width: 768px) {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+  
+  .footer-credits {
+    color: #545454;
+    line-height: calc(16 / 14);
+    letter-spacing: 0.03em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  
+    @media screen and (min-width: 768px) {
+      font-size: 16px;
+      line-height: calc(19 / 16);
+    }
+  }
+  
+  .heart-icon {
+    margin-left: 10px;
+    margin-right: 10px;
+    display: block;
+  }
+  
+  .credits-text {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    color: #545454;
+    line-height: calc(16 / 14);
+    letter-spacing: 0.03em;
     cursor: pointer;
-}
+  
+    &:hover,
+    &:focus {
+      color: #ff6b08;
+    }
+    @media screen and (min-width: 768px) {
+      font-size: 16px;
+      line-height: calc(19 / 16);
+      padding: 0;
+    }
+  }
+  
