am adaugat functionalitate pentru trailer si am stilizat modalul

--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -20,14 +20,14 @@
           <div id="movie-description">
             <div class="description-item">
               <span>Vote/Votes:</span>
-              <div id="movie-votes"></div>
+              <div id="modal-movie-votes" class="modal-votes"></div>
             </div>
             <div class="description-item">
               <span>Popularity:</span>
               <div id="movie-popularity"></div>
             </div>
             <div class="description-item">
-              <span >Original title:</span>
+              <span>Original title:</span>
               <div id="original-title"></div>
             </div>
             <div class="description-item">
