--- a/src/sass/modal.scss
+++ b/src/sass/modal.scss
@@ -55,16 +55,14 @@
   padding: 40px 12px;
   width: 100%;
   max-width: 806px;
+  height: 100%;
+  max-height: 558px;
   border-radius: 3px;
   height: max-content;
-  max-height: 90vh;
-  overflow-y: auto;
 }
-
 #modal-content {
   display: flex;
   align-items: start;
-  width: 100%;
 }
 
 .img-posters {
@@ -81,14 +79,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100px;
-  height: 100px;
+  width: 80px;
+  height: 80px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: transparent;
   border: none;
-  color: #f2936d;
   cursor: pointer;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -98,11 +95,6 @@
 .img-posters:focus .trailer-btn {
   color: #ff6b08;
   transform: translate(-50%, -50%) scale(1.1);
-}
-
-.trailer-icon {
-  width: 100px;
-  height: 100px;
 }
 
 #details-section {
@@ -205,13 +197,24 @@
   color: #fff;
   border-color: transparent;
 }
-
 /* Stilizare pentru mobil */
 @media screen and (max-width: 767px) {
+  body.modal-open {
+    overflow: hidden; /* Blochează scroll-ul pe fundal */
+  }
+
   #movie-modal {
+    position: fixed; /* Fixează modalul */
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
     width: 280px;
-    height: auto;
+    max-height: 100vh; /* Înălțimea maximă este înălțimea viewport-ului */
+    overflow-y: auto; /* Permite scroll doar în interiorul modalului */
     padding: 48px 20px 40px 20px;
+    background-color: #fff;
+    border-radius: 8px;
+    z-index: 1000;
   }
 
   #modal-content {
@@ -221,9 +224,8 @@
 
   .img-posters {
     width: 100%;
-    width: 240px;
+    max-width: 240px;
     height: 357px;
-    margin-right: 0;
     margin-bottom: 20px;
   }
 
@@ -264,24 +266,60 @@
   }
 
   .button-wrapper {
-    gap: 4px;
+    gap: 10px;
     margin-top: 20px;
+    flex-direction: column;
   }
 
   .add-to-watched-btn,
   .add-to-queue-btn {
-    width: 125px;
-    height: 34px;
+    width: 100%;
+    height: 38px;
     font-size: 12px;
   }
+}
+#movie-modal .vote-average {
+  display: inline-block;
+  font-weight: 700;
+  padding: 2px 8px;
+  border-radius: 5px;
+  font-size: 12px;
+  line-height: 1.2;
+  color: #fff;
+}
+
+#movie-modal .movie__average--red {
+  background-color: #b92f2c;
+}
+
+#movie-modal .movie__average--orange {
+  background-color: #ff6b08; 
+}
+
+#movie-modal .movie__average--green {
+  background-color: #4caf50; 
+}
+
+#movie-modal .vote-count {
+  display: inline-block;
+  background-color: #f7f7f7;
+  color: #000;
+  font-weight: 700;
+  padding: 2px 8px;
+  border-radius: 5px;
+  font-size: 12px;
 }
 
 /* Stilizare pentru mobil */
 @media screen and (max-width: 767px) {
+  body.modal-open {
+    overflow: hidden;
+  }
+
   #movie-modal {
     width: 280px;
-    height: auto;
     padding: 48px 20px 40px 20px;
+    overflow-y: auto;
   }
 
   #modal-content {
@@ -336,6 +374,7 @@
   .button-wrapper {
     gap: 4px;
     margin-top: 20px;
+    flex-direction: row;
   }
 
   .add-to-watched-btn,
