--- a/src/sass/modal.scss
+++ b/src/sass/modal.scss
@@ -20,6 +20,7 @@
   right: 16px;
   cursor: pointer;
   opacity: 0.7;
+  transition: transform 0.3s ease, background-color 0.3s ease, opacity 0.3s ease;
 }
 
 .backdrop:hover {
@@ -34,6 +35,7 @@
   height: 14px;
   width: 2px;
   background-color: #000;
+  transition: background-color 0.3s ease;
 }
 
 .backdrop:before {
@@ -42,6 +44,16 @@
 
 .backdrop:after {
   transform: rotate(-45deg);
+}
+
+.backdrop:active {
+  background-color: #ff6b01;
+  transform: rotate(180deg);
+}
+
+.backdrop:active:before,
+.backdrop:active:after {
+  background-color: #fff;
 }
 
 .open {
@@ -197,20 +209,52 @@
   color: #fff;
   border-color: transparent;
 }
+#movie-modal .vote-average {
+  display: inline-block;
+  font-weight: 700;
+  padding: 2px 8px;
+  border-radius: 5px;
+  font-size: 12px;
+  line-height: 1.2;
+  color: #fff;
+}
+
+#movie-modal .movie__average--red {
+  background-color: #b92f2c;
+}
+
+#movie-modal .movie__average--orange {
+  background-color: #ff6b08;
+}
+
+#movie-modal .movie__average--green {
+  background-color: #4caf50;
+}
+
+#movie-modal .vote-count {
+  display: inline-block;
+  background-color: #f7f7f7;
+  color: #000;
+  font-weight: 700;
+  padding: 2px 8px;
+  border-radius: 5px;
+  font-size: 12px;
+}
+
 /* Stilizare pentru mobil */
 @media screen and (max-width: 767px) {
   body.modal-open {
-    overflow: hidden; /* Blochează scroll-ul pe fundal */
+    overflow: hidden;
   }
 
   #movie-modal {
-    position: fixed; /* Fixează modalul */
+    position: fixed;
     top: 0;
     left: 50%;
     transform: translateX(-50%);
     width: 280px;
-    max-height: 100vh; /* Înălțimea maximă este înălțimea viewport-ului */
-    overflow-y: auto; /* Permite scroll doar în interiorul modalului */
+    max-height: 100vh;
+    overflow-y: auto;
     padding: 48px 20px 40px 20px;
     background-color: #fff;
     border-radius: 8px;
@@ -278,127 +322,28 @@
     font-size: 12px;
   }
 }
-#movie-modal .vote-average {
-  display: inline-block;
-  font-weight: 700;
-  padding: 2px 8px;
-  border-radius: 5px;
-  font-size: 12px;
-  line-height: 1.2;
-  color: #fff;
-}
 
-#movie-modal .movie__average--red {
-  background-color: #b92f2c;
-}
-
-#movie-modal .movie__average--orange {
-  background-color: #ff6b08; 
-}
-
-#movie-modal .movie__average--green {
-  background-color: #4caf50; 
-}
-
-#movie-modal .vote-count {
-  display: inline-block;
-  background-color: #f7f7f7;
-  color: #000;
-  font-weight: 700;
-  padding: 2px 8px;
-  border-radius: 5px;
-  font-size: 12px;
-}
-
-/* Stilizare pentru mobil */
-@media screen and (max-width: 767px) {
+/* Stilizare pentru Tablete */
+@media screen and (min-width: 768px) and (max-width: 992px) {
+  .modal-wrapper {
+    overflow: hidden;
+  }
   body.modal-open {
     overflow: hidden;
   }
 
   #movie-modal {
-    width: 280px;
-    padding: 48px 20px 40px 20px;
-    overflow-y: auto;
-  }
-
-  #modal-content {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .img-posters {
-    width: 100%;
-    width: 240px;
-    height: 357px;
-    margin-right: 0;
-    margin-bottom: 20px;
-  }
-
-  .trailer-btn {
-    width: 60px;
-    height: 60px;
-    font-size: 60px;
-  }
-
-  #details-section {
-    max-width: 100%;
-    font-size: 14px;
-  }
-
-  #movie-title {
-    font-size: 20px;
-    margin-bottom: 20px;
-  }
-
-  #movie-description {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .about-wrapper {
-    margin-top: 10px;
-    font-size: 12px;
-    text-align: justify;
-  }
-
-  .about-wrapper span {
-    margin-bottom: 8px;
-    font-size: 12px;
-  }
-
-  #movie-about {
-    line-height: 20px;
-  }
-
-  .button-wrapper {
-    gap: 4px;
-    margin-top: 20px;
-    flex-direction: row;
-  }
-
-  .add-to-watched-btn,
-  .add-to-queue-btn {
-    width: 125px;
-    height: 34px;
-    font-size: 12px;
-  }
-}
-
-/* Stilizare pentru Tablete */
-@media screen and (min-width: 768px) and (max-width: 992px) {
-  #movie-modal {
     width: 704px;
-    height: auto;
-    padding-left: 36px;
-    padding-top: 40px;
-    padding-right: 72px;
-    padding-bottom: 138.45px;
+    max-height: 90vh;
+    padding: 36px 72px 40px 36px;
+    border-radius: 5px;
+    overflow-y: auto;
+    background-color: #fff;
   }
 
   #modal-content {
     flex-direction: row;
-    gap: 68px;
+    gap: 20px;
   }
 
   .img-posters {
@@ -424,7 +369,7 @@
   }
 
   .about-wrapper {
-    margin-top: 7.45px;
+    margin-top: 10px;
     line-height: 20px;
   }
 
