--- a/src/sass/trailer.scss
+++ b/src/sass/trailer.scss
@@ -63,6 +63,16 @@
   }
 }
 
-@media screen and (max-width: 767px){
-  
+@media screen and (max-width: 767px) {
+  .trailer-modal-content {
+    width: 300px;
+    height: 200px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 992px) {
+  .trailer-modal-content {
+    width: 400px;
+    height: 300px;
+  }
 }
