--- a/src/sass/_pagination.scss
+++ b/src/sass/_pagination.scss
@@ -33,16 +33,18 @@
 }
 
 .pagination-button {
-  padding: 0;
-  background-color: white;
+  min-width: 40px;
+  height: 40px;
+  background: 0 0;
   border: none;
-  color: #000000;
-  cursor: pointer;
-  font-weight: 500;
+  border-radius: 5px;
+  padding: 8px;
+  font-family: inherit;
   font-size: 12px;
-  line-height: 1.333;
-  // width: 40px;
-  // height: 40px;
+  font-weight: 500;
+  line-height: 1.25;
+  transition: background-color .25s cubic-bezier(.4,0,.2,1), color .25s cubic-bezier(.4,0,.2,1);
+  cursor: pointer;
 }
 
 .pagination--current {
