am ajustat stilizarea butoanelor de paginare
am scos "dots" din @media mobile conform design-ului

--- a/src/sass/gallery.scss
+++ b/src/sass/gallery.scss
@@ -10,7 +10,7 @@ ul.movies {
 
 /* Stiluri generale pentru secțiunea galeriei */
 .gallery {
-  padding: 60px 0; /* Spațiu vertical în jurul galeriei */
+  padding: 60px 0 0 0; /* Spațiu vertical în jurul galeriei */
 }
 
 /* Grila de filme pentru afișare */
