--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -7,7 +7,7 @@
       <button class="pagination-button arrow-left">
       </button>
       <button class="pagination-button first-button">1</button>
-      <span class="dots" id="previous">...</span>
+      <button class="dots-btn"><span class="dots" id="previous">...</span></button>
       <button class="pagination-button pagination--current" data-index="1">
         1
       </button>
@@ -15,7 +15,7 @@
       <button class="pagination-button" data-index="3">3</button>
       <button class="pagination-button" data-index="4">4</button>
       <button class="pagination-button" data-index="5">5</button>
-      <span class="dots" id="after">...</span>
+      <button class="dots-btn"><span class="dots" id="after">...</span></button>
       <button class="pagination-button last-button">20</button>
       <button class="pagination-button arrow-right">
       </button>
