--- a/src/sass/_pagination.scss
+++ b/src/sass/_pagination.scss
@@ -10,7 +10,7 @@
   font-weight: 500;
   line-height: 16px;
   text-align: left;
-  gap: 8px;
+  // gap: 8px;
   text-underline-position: from-font;
   text-decoration-skip-ink: none;
 
@@ -30,27 +30,53 @@
 
 .dots {
   color: black;
+  font-size: 16px;
+  margin-left: 16px;
+}
+
+.dots-btn {
+  padding: 0;              /* Fără padding suplimentar */
+  background: none;        /* Fără fundal */
+  border: none;
 }
 
 .pagination-button {
   min-width: 40px;
   height: 40px;
-  background: 0 0;
-  border: none;
-  border-radius: 5px;
   padding: 8px;
+  font-weight: 500;
   font-family: inherit;
   font-size: 12px;
-  font-weight: 500;
   line-height: 1.25;
-  transition: background-color .25s cubic-bezier(.4,0,.2,1), color .25s cubic-bezier(.4,0,.2,1);
+  border-radius: 5px;
+  border: none;
+  background: transparent;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+              color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
+
+  &:not(:last-child) {
+    margin-right: 2px;
+  }
+
+  &:hover,
+  &:focus {
+    color: #fff;
+    background-color: rgba(185, 47, 44, 0.6); /* Semi-transparent */
+  }
+
+  /* Starea activă gestionată cu clasa */
+  &.pagination--current {
+    background-color: #b92f2c; /* Roșu solid */
+    color: #fff;
+  }
 }
 
+
 .pagination--current {
-  width: 40px;
-  height: 40px;
-  border-radius: 5px;
+  // width: 40px;
+  // height: 40px;
+  // border-radius: 5px;
   background-color: #b92f2c;
   color: white;
 }
@@ -58,16 +84,19 @@
 .dots,
 .first-button,
 .last-button {
-  @media screen and (max-width: $mobile) {
+  @media screen and (max-width: 768px) {
     display: none;
   }
 }
 
 .arrow-left,
 .arrow-right {
+  justify-content: center;
+  align-content: center;
   width: 40px;
   height: 40px;
   border-radius: 5px;
+  border: none;
   background-color: #f7f7f7;
   transform: matrix(-1, 0, 0, 1, 0, 0);
   stroke: #000;
